upload button small css fix

--- a/frontend/src/components/UploadButton/UploadButton.module.css
+++ b/frontend/src/components/UploadButton/UploadButton.module.css
@@ -1,5 +1,6 @@
-.container{
 
+.icon {
+    transform: rotate(180deg) scale(0.35);
 }
 
 .uploadButton{
